# Computer-Vision-Recyclable-Classifier

./: README.md  main.py  pyproject.toml
csci508_final/: __init__.py  data_augmentation.py  data_split_ratios.py  epoch_quantity.py  hoff_code.py  hoff_main_Resnet.py  hoff_main_xfr.py  label_data.py  labeldata.py  load_data.py  main.py  model_selection.py  pickle_file_test.py  train_test_model.py
csci508_final/Images/: README.md
csci508_final/Images/TRAINING & TEST/: README.md
csci508_final/Images/TRAINING & TEST/TRAINING & TEST IMAGES/: README.md
csci508_final/Images/TRAINING_&_TEST/: README.md
csci508_final/Images/TRAINING_&_TEST/TRAINING_&_TEST_IMAGES/: README.md
csci508_final/Images/TRIAL/: README.md
csci508_final/Images/TRIAL/TRIAL IMAGES/: README.md
csci508_final/Images/TRIAL/TRIAL_IMAGES/: README.md
csci508_final/architectures/: model_loader.py  resnet50modnet.py
csci508_final/saved_models/: README.md  resnet50_model_results.csv
csci508_final/saved_models_and_results/: README.md
csci508_final/saved_models_and_results/saved_models/: README.md
csci508_final/saved_models_and_results/saved_results/: README.md
recylatron/: pyproject.toml
recylatron/tests/: test_recylatron.py
tests/: test_csci508_final.py
