[tool.poetry]
name = "csci508-final"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.18.1"
opencv-python = "^4.2.0"
torch = "^1.4.0"
torchvision = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
