[tool.poetry]
name = "recylatron"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.1"
opencv-python = "^4.2.0"
opencv-contrib-python = "^4.2.0"
opencv_python = "^4.2.0"
torch = "^1.4.0"
torchvision = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
